--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "cuongstore",
+  "name": "GlowUp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
