--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reown/appkit": "^1.7.3",
+    "@reown/appkit-adapter-ethers": "^1.7.3",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "ethers": "^6.13.7",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
@@ -37,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "vite": "^6.3.3"
   }
 }
