--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.13",
     "ethers": "^6.13.7",
     "framer-motion": "^12.7.4",
+    "ipfs-http-client": "^60.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
