--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reown/appkit": "^1.7.3",
     "@reown/appkit-adapter-ethers": "^1.7.3",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
-    "cra-template": "1.2.0",
+    "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
     "ethers": "^6.13.7",
     "framer-motion": "^12.7.4",
@@ -46,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "vite": "^6.3.3"
   }
 }
